--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,9 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro!
-// 
-// Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
-
-// Everything between these triple-dash code fences
-// is your "component frontmatter". It never runs in the browser.
-console.log('This runs in your terminal, not the browser!');
+import Welcome from '../lib/home/home.main.astro';
+import Layout from '../lib/ui/layouts/Layout.astro';
+import NavBar from '../lib/ui/navigation/NavBar.astro';
 ---
-
 <Layout>
 	<Welcome />
+	<NavBar />
 </Layout>
