add prettier and format on save to project

--- a/src/pages/family/index.astro
+++ b/src/pages/family/index.astro
@@ -1,11 +1,12 @@
 ---
-import Logo from '../../lib/home/home.main.astro';
-import Layout from '../../lib/ui/layouts/Layout.astro';
-import NavBar from '../../lib/ui/navigation/NavBar.astro';
-import FamilyMemberList from '../../lib/family/_ui/FamilyMemberList.astro';
+import Logo from "../../lib/home/home.main.astro";
+import Layout from "../../lib/ui/layouts/Layout.astro";
+import NavBar from "../../lib/ui/navigation/NavBar.astro";
+import FamilyMemberList from "../../lib/family/_ui/FamilyMemberList.astro";
 ---
+
 <Layout>
-	<Logo />
-	<NavBar />
-	<FamilyMemberList />
+  <Logo />
+  <NavBar />
+  <FamilyMemberList />
 </Layout>
