--- a/src/lib/home/home.main.astro
+++ b/src/lib/home/home.main.astro
@@ -1,15 +1,15 @@
 <main>
-	<section id="hero">
-		<h1>
-			Andrew Hol(z)brook
-		</h1>
-	</section>
+  <section id="hero">
+    <h1>Andrew Hol(z)brook</h1>
+  </section>
 </main>
 
 <style>
-	main {
-		font-family: Inter, Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif;
-		display: flex;
-		justify-content: center;
-	}
+  main {
+    font-family:
+      Inter, Roboto, "Helvetica Neue", "Arial Nova", "Nimbus Sans", Arial,
+      sans-serif;
+    display: flex;
+    justify-content: center;
+  }
 </style>
