--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -1,9 +1,10 @@
 ---
-import Welcome from '../../lib/home/home.main.astro';
-import Layout from '../../lib/ui/layouts/Layout.astro';
-import NavBar from '../../lib/ui/navigation/NavBar.astro';
+import Welcome from "../../lib/home/home.main.astro";
+import Layout from "../../lib/ui/layouts/Layout.astro";
+import NavBar from "../../lib/ui/navigation/NavBar.astro";
 ---
+
 <Layout>
-	<Welcome />
-	<NavBar />
+  <Welcome />
+  <NavBar />
 </Layout>
