--- a/src/pages/family/index.astro
+++ b/src/pages/family/index.astro
@@ -1,12 +1,12 @@
 ---
-import Logo from "../../lib/home/home.main.astro";
+import Welcome from "../../lib/home/home.main.astro";
 import Layout from "../../lib/ui/layouts/Layout.astro";
 import NavBar from "../../lib/ui/navigation/NavBar.astro";
 import FamilyMemberList from "../../lib/family/_ui/FamilyMemberList.astro";
 ---
 
 <Layout>
-  <Logo />
-  <NavBar />
-  <FamilyMemberList />
+	<Welcome />
+	<NavBar />
+	<FamilyMemberList />
 </Layout>
