--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,5 @@
 ---
-import Welcome from "../lib/home/home.main.astro";
-import Layout from "../lib/ui/layouts/Layout.astro";
-import NavBar from "../lib/ui/navigation/NavBar.astro";
+import HomePage from "../lib/home/HomePage.astro";
 ---
 
-<Layout>
-  <Welcome />
-  <NavBar />
-</Layout>
+<HomePage />
