--- a/src/lib/play/PlayPage.astro
+++ b/src/lib/play/PlayPage.astro
@@ -1,10 +1,10 @@
 ---
-import Welcome from "../home/Welcome.astro";
-import Layout from "../_ui/layouts/Layout.astro";
-import NavBar from "../_ui/navigation/NavBar.astro";
+import HolzbrookLogo from "../home/HolzbrookLogo.astro";
+import NavBar from "../navigation/NavBar.astro";
+import CommonPage from "../_page/CommonPage.astro";
 ---
 
-<Layout>
-  <Welcome />
+<CommonPage>
+  <HolzbrookLogo />
   <NavBar />
-</Layout>
+</CommonPage>
