--- a/src/lib/_test/TestPage.astro
+++ b/src/lib/_test/TestPage.astro
@@ -2,9 +2,11 @@
 import NavBar from "../navigation/NavBar.astro";
 import CommonPage from "../_page/CommonPage.astro";
 import User from "../_test/User.astro";
+import { AllJsonPlaceholderQueries } from "./jsonPlaceholder/AllJsonPlaceholderQueries.tsx";
 ---
 
 <CommonPage>
-  <NavBar />
-  <User />
+	<NavBar />
+	<User />
+	<AllJsonPlaceholderQueries />
 </CommonPage>
