make pages identifiable on screen

--- a/src/lib/work/WorkPage.astro
+++ b/src/lib/work/WorkPage.astro
@@ -7,4 +7,5 @@ import CommonPage from "../_page/CommonPage.astro";
 <CommonPage>
   <HolzbrookLogo />
   <NavBar />
+  <h1>Work Page</h1>
 </CommonPage>
