--- a/src/lib/_test/TestPage.astro
+++ b/src/lib/_test/TestPage.astro
@@ -3,9 +3,11 @@ import NavBar from "../navigation/NavBar.astro";
 import CommonPage from "../_page/CommonPage.astro";
 import { AllJsonPlaceholderQueries } from "./api/solidJsResources/AllJsonPlaceholderQueries.tsx";
 import RandomUser from "./api/astroFetchOnBuild/RandomUser.astro";
+import HolzbrookLogo from "../home/HolzbrookLogo.astro";
 ---
 
 <CommonPage>
+	<HolzbrookLogo />
 	<NavBar />
 	<RandomUser />
 	<AllJsonPlaceholderQueries />
