--- a/src/lib/home/HomePage.astro
+++ b/src/lib/home/HomePage.astro
@@ -7,4 +7,5 @@ import CommonPage from "../_page/CommonPage.astro";
 <CommonPage>
   <HolzbrookLogo />
   <NavBar />
+  <h1>Home Page</h1>
 </CommonPage>
