--- a/src/lib/play/PlayPage.astro
+++ b/src/lib/play/PlayPage.astro
@@ -7,4 +7,5 @@ import CommonPage from "../_page/CommonPage.astro";
 <CommonPage>
   <HolzbrookLogo />
   <NavBar />
+  <h1>Play Page</h1>
 </CommonPage>
