colocate code with hidden files using `_` prefix on file name

--- a/src/pages/family/_ui/FamilyMemberList.astro
+++ b/src/pages/family/_ui/FamilyMemberList.astro
@@ -1,6 +1,6 @@
 ---
 import FamilyMemberListItem from "./FamilyMemberListItem.astro";
-import { familyMembers } from "../familyMembers";
+import { familyMembers } from "../_familyMembers";
 ---
 
 <ul>
