--- a/src/pages/test/_TestPage.astro
+++ b/src/pages/test/_TestPage.astro
@@ -1,9 +1,9 @@
 ---
-import NavBar from "../navigation/NavBar.astro";
-import CommonPage from "../_page/CommonPage.astro";
 import { AllJsonPlaceholderQueries } from "./api/solidJsResources/AllJsonPlaceholderQueries.tsx";
 import RandomUser from "./api/astroFetchOnBuild/RandomUser.astro";
-import HolzbrookLogo from "../home/HolzbrookLogo.astro";
+import CommonPage from "../../lib/CommonPage.astro";
+import HolzbrookLogo from "../_HolzbrookLogo.astro";
+import NavBar from "../../lib/NavBar.astro";
 ---
 
 <CommonPage>
