--- a/src/lib/NavBar.astro
+++ b/src/lib/NavBar.astro
@@ -1,5 +1,5 @@
 ---
-import { makeSherpa } from "../navigation/sherpa";
+import { makeSherpa } from "./sherpa";
 
 const sherpa = makeSherpa();
 ---
