--- a/src/pages/family/_FamilyPage.astro
+++ b/src/pages/family/_FamilyPage.astro
@@ -1,8 +1,8 @@
 ---
+import CommonPage from "../../lib/CommonPage.astro";
+import NavBar from "../../lib/NavBar.astro";
+import HolzbrookLogo from "../_HolzbrookLogo.astro";
 import FamilyMemberList from "../family/_ui/FamilyMemberList.astro";
-import HolzbrookLogo from "../home/HolzbrookLogo.astro";
-import NavBar from "../navigation/NavBar.astro";
-import CommonPage from "../_page/CommonPage.astro";
 ---
 
 <CommonPage>
