--- a/src/pages/family/_FamilyPage.astro
+++ b/src/pages/family/_FamilyPage.astro
@@ -1,7 +1,7 @@
 ---
 import CommonPage from "../../lib/CommonPage.astro";
 import NavBar from "../../lib/NavBar.astro";
-import HolzbrookLogo from "../_HolzbrookLogo.astro";
+import HolzbrookLogo from "../../lib/HolzbrookLogo.astro";
 import FamilyMemberList from "../family/_ui/FamilyMemberList.astro";
 ---
 
