--- a/src/pages/test/_TestPage.astro
+++ b/src/pages/test/_TestPage.astro
@@ -2,7 +2,7 @@
 import { AllJsonPlaceholderQueries } from "./api/solidJsResources/AllJsonPlaceholderQueries.tsx";
 import RandomUser from "./api/astroFetchOnBuild/RandomUser.astro";
 import CommonPage from "../../lib/CommonPage.astro";
-import HolzbrookLogo from "../_HolzbrookLogo.astro";
+import HolzbrookLogo from "../../lib/HolzbrookLogo.astro";
 import NavBar from "../../lib/NavBar.astro";
 ---
 
