--- a/src/pages/_HomePage.astro
+++ b/src/pages/_HomePage.astro
@@ -1,11 +1,11 @@
 ---
 import CommonPage from "../lib/CommonPage.astro";
 import NavBar from "../lib/NavBar.astro";
-import HolzbrookLogo from "./_HolzbrookLogo.astro";
+import HolzbrookLogo from "../lib/HolzbrookLogo.astro";
 ---
 
 <CommonPage>
   <HolzbrookLogo />
   <NavBar />
-  <h1>Home Page</h1>
+  <h1 class="text-gray-500">Home Page</h1>
 </CommonPage>
