--- a/src/lib/HolzbrookLogo.astro
+++ b/src/lib/HolzbrookLogo.astro
@@ -1,15 +1,9 @@
-<main>
-  <section id="hero">
-    <h1>Andrew Hol(z)brook</h1>
-  </section>
-</main>
+---
+import { makeSherpa } from "./sherpa";
 
-<style>
-  main {
-    font-family:
-      Inter, Roboto, "Helvetica Neue", "Arial Nova", "Nimbus Sans", Arial,
-      sans-serif;
-    display: flex;
-    justify-content: center;
-  }
-</style>
+const sherpa = makeSherpa();
+---
+
+<a href={sherpa.home({})}>
+  <h1>Andrew Hol(z)brook</h1>
+</a>
