--- a/src/pages/family/_FamilyPage.astro
+++ b/src/pages/family/_FamilyPage.astro
@@ -1,12 +1,12 @@
 ---
-import CommonPage from "../../lib/CommonPage.astro";
-import NavBar from "../../lib/NavBar.astro";
-import HolzbrookLogo from "../../lib/HolzbrookLogo.astro";
+import AppPage from "../_AppPage.astro";
 import FamilyMemberList from "../family/_ui/FamilyMemberList.astro";
+import HolzbrookLogo from "../../lib/HolzbrookLogo.astro";
+import NavBar from "../../lib/NavBar.astro";
 ---
 
-<CommonPage>
+<AppPage>
 	<HolzbrookLogo />
 	<NavBar />
 	<FamilyMemberList />
-</CommonPage>
+</AppPage>
