--- a/src/pages/test/_TestPage.astro
+++ b/src/pages/test/_TestPage.astro
@@ -1,14 +1,14 @@
 ---
+import AppPage from "../_AppPage.astro";
 import { AllJsonPlaceholderQueries } from "./api/solidJsResources/AllJsonPlaceholderQueries.tsx";
 import RandomUser from "./api/astroFetchOnBuild/RandomUser.astro";
-import CommonPage from "../../lib/CommonPage.astro";
 import HolzbrookLogo from "../../lib/HolzbrookLogo.astro";
 import NavBar from "../../lib/NavBar.astro";
 ---
 
-<CommonPage>
+<AppPage>
 	<HolzbrookLogo />
 	<NavBar />
 	<RandomUser />
 	<AllJsonPlaceholderQueries />
-</CommonPage>
+</AppPage>
