--- a/src/pages/work/_WorkPage.astro
+++ b/src/pages/work/_WorkPage.astro
@@ -1,11 +1,11 @@
 ---
-import CommonPage from "../../lib/CommonPage.astro";
-import NavBar from "../../lib/NavBar.astro";
+import AppPage from "../_AppPage.astro";
 import HolzbrookLogo from "../../lib/HolzbrookLogo.astro";
+import NavBar from "../../lib/NavBar.astro";
 ---
 
-<CommonPage>
+<AppPage>
   <HolzbrookLogo />
   <NavBar />
   <h1>Work Page</h1>
-</CommonPage>
+</AppPage>
