rename `NavBar` to `AppNavBar` and `CommonPage` to `AppPage`

--- a/src/pages/family/_FamilyPage.astro
+++ b/src/pages/family/_FamilyPage.astro
@@ -1,12 +1,12 @@
 ---
-import AppPage from "../_AppPage.astro";
+import AppNavBar from "../_app/_AppNavBar.astro";
+import AppPage from "../_app/_AppPage.astro";
 import FamilyMemberList from "../family/_ui/FamilyMemberList.astro";
 import HolzbrookLogo from "../../lib/HolzbrookLogo.astro";
-import NavBar from "../../lib/NavBar.astro";
 ---
 
 <AppPage>
 	<HolzbrookLogo />
-	<NavBar />
+	<AppNavBar />
 	<FamilyMemberList />
 </AppPage>
