--- a/src/pages/_HomePage.astro
+++ b/src/pages/_HomePage.astro
@@ -1,11 +1,11 @@
 ---
-import AppPage from "./_AppPage.astro";
+import AppPage from "./_app/_AppPage.astro";
+import AppNavBar from "./_app/_AppNavBar.astro";
 import HolzbrookLogo from "../lib/HolzbrookLogo.astro";
-import NavBar from "../lib/NavBar.astro";
 ---
 
 <AppPage>
   <HolzbrookLogo />
-  <NavBar />
+  <AppNavBar />
   <h1 class="text-gray-500">Home Page</h1>
 </AppPage>
