--- a/src/pages/work/_WorkPage.astro
+++ b/src/pages/work/_WorkPage.astro
@@ -1,11 +1,11 @@
 ---
-import AppPage from "../_AppPage.astro";
+import AppNavBar from "../_app/_AppNavBar.astro";
+import AppPage from "../_app/_AppPage.astro";
 import HolzbrookLogo from "../../lib/HolzbrookLogo.astro";
-import NavBar from "../../lib/NavBar.astro";
 ---
 
 <AppPage>
   <HolzbrookLogo />
-  <NavBar />
+  <AppNavBar />
   <h1>Work Page</h1>
 </AppPage>
