--- a/src/pages/_app/_AppLogo.astro
+++ b/src/pages/_app/_AppLogo.astro
@@ -5,8 +5,9 @@ const sherpa = makeSherpa();
 ---
 
 <a href={sherpa.home({})}>
-  <h1></h1>
-  <div class="flex-shrink-0">
-    <img src="/logo.svg" alt="Andrew Hol(z)brook Logo" class="h-10" />
-  </div>
+  <img
+    src="https://picsum.photos/id/404/200/80"
+    alt="Andrew Hol(z)brook | Placeholder Logo"
+    class="my-4 mx-4"
+  />
 </a>
