--- a/src/pages/_app/_AppNavBar.astro
+++ b/src/pages/_app/_AppNavBar.astro
@@ -3,7 +3,9 @@ import AppNavMenu from "./_AppNavMenu.astro";
 import AppLogo from "./_AppLogo.astro";
 ---
 
-<header class="w-full flex justify-between items-center">
-    <AppLogo />
+<header class="w-full flex justify-between items-center h-24">
+    <div class="my-4 mx-4">
+        <AppLogo />
+    </div>
     <AppNavMenu />
 </header>
