--- a/src/pages/_HomePage.astro
+++ b/src/pages/_HomePage.astro
@@ -1,9 +1,12 @@
 ---
 import AppPage from "./_app/_AppPage.astro";
 import AppNavBar from "./_app/_AppNavBar.astro";
+import AppPageBody from "./_app/_AppPageBody.astro";
 ---
 
 <AppPage>
   <AppNavBar />
-  <h1 class="text-gray-500">Home Page</h1>
+  <AppPageBody>
+    <h1 class="text-gray-500">Home Page</h1>
+  </AppPageBody>
 </AppPage>
