--- a/src/pages/work/_WorkPage.astro
+++ b/src/pages/work/_WorkPage.astro
@@ -1,9 +1,12 @@
 ---
 import AppNavBar from "../_app/_AppNavBar.astro";
 import AppPage from "../_app/_AppPage.astro";
+import AppPageBody from "../_app/_AppPageBody.astro";
 ---
 
 <AppPage>
   <AppNavBar />
-  <h1>Work Page</h1>
+  <AppPageBody>
+    <h1>Work Page</h1>
+  </AppPageBody>
 </AppPage>
