--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -1,5 +1,12 @@
 ---
-import WorkPage from "./_WorkPage.astro";
+import AppNavBar from "../_app/_AppNavBar.astro";
+import AppPage from "../_app/_AppPage.astro";
+import AppPageBody from "../_app/_AppPageBody.astro";
 ---
 
-<WorkPage />
+<AppPage>
+    <AppNavBar />
+    <AppPageBody>
+        <h1>Work Page</h1>
+    </AppPageBody>
+</AppPage>
