--- a/src/pages/test/index.astro
+++ b/src/pages/test/index.astro
@@ -1,5 +1,15 @@
 ---
-import TestPage from "./_TestPage.astro";
+import AppNavBar from "../_app/_AppNavBar.astro";
+import AppPage from "../_app/_AppPage.astro";
+import { AllJsonPlaceholderQueries } from "./api/solidJsResources/AllJsonPlaceholderQueries.tsx";
+import RandomUser from "./api/astroFetchOnBuild/RandomUser.astro";
+import AppPageBody from "../_app/_AppPageBody.astro";
 ---
 
-<TestPage />
+<AppPage>
+    <AppNavBar />
+    <AppPageBody>
+        <RandomUser />
+        <AllJsonPlaceholderQueries />
+    </AppPageBody>
+</AppPage>
