--- a/src/pages/_app/_AppPage.astro
+++ b/src/pages/_app/_AppPage.astro
@@ -12,5 +12,16 @@ import "./src/styles/global.css";
     <title>Andrew Hol(z)brook</title>
   </head>
 
-  <slot />
+  <body>
+    <slot />
+  </body>
 </html>
+
+<style>
+  html,
+  body {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+  }
+</style>
