--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,16 @@
 ---
-import AppPage from "./_app/_AppPage.astro";
+import Box from "../lib/ui/Box.astro";
+import Center from "../lib/ui/Center.astro";
+import HStack from "../lib/ui/HStack.astro";
 import AppNavBar from "./_app/_AppNavBar.astro";
+import AppPage from "./_app/_AppPage.astro";
 import AppPageBody from "./_app/_AppPageBody.astro";
+import MeCard from "./_meCard.astro";
 ---
 
 <AppPage>
     <AppNavBar />
-    <AppPageBody>
-        <h1 class="text-gray-500">Home Page</h1>
+    <AppPageBody class="py-8 px-4">
+        <MeCard />
     </AppPageBody>
 </AppPage>
