use card in FamilyMemberListItem

--- a/src/pages/_app/_AppPageBody.astro
+++ b/src/pages/_app/_AppPageBody.astro
@@ -9,6 +9,6 @@ const props: Props = Astro.props;
 const className = props.class ?? "";
 ---
 
-<Stack class={`h-screen bg-gray-100 ${className}`}>
+<Stack class={`h-screen bg-gray-100 py-8 px-4 ${className}`}>
     <slot />
 </Stack>
