--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import MeCard from "./_meCard.astro";
 
 <AppPage>
     <AppNavBar />
-    <AppPageBody class="py-8 px-4">
+    <AppPageBody>
         <MeCard />
     </AppPageBody>
 </AppPage>
