get placeholder image to load faster across pages

--- a/src/pages/_app/_AppLogo.astro
+++ b/src/pages/_app/_AppLogo.astro
@@ -6,7 +6,7 @@ const sherpa = makeSherpa();
 
 <a href={sherpa.home({})}>
   <img
-    src="https://picsum.photos/id/404/200/80"
+    src="./logo-placeholder.jpg"
     alt="Andrew Hol(z)brook | Placeholder Logo"
   />
 </a>
