fill `/work` page with garbage

--- a/src/pages/play/index.astro
+++ b/src/pages/play/index.astro
@@ -2,11 +2,12 @@
 import AppNavBar from "../_app/_AppNavBar.astro";
 import AppPage from "../_app/_AppPage.astro";
 import AppPageBody from "../_app/_AppPageBody.astro";
+import MeCard from "../_meCard.astro";
 ---
 
 <AppPage>
     <AppNavBar />
     <AppPageBody>
-        <h1>Play Page</h1>
+        <MeCard />
     </AppPageBody>
 </AppPage>
