revamp home page, add hobbies

--- a/src/pages/_app/_AppHeaderCommon.astro
+++ b/src/pages/_app/_AppHeaderCommon.astro
@@ -1,11 +1,11 @@
 ---
 import AppNavMenu from "./_AppNavMenu.astro";
-import AppLogo from "./_AppLogo.astro";
+import AppLogoLink from "./_AppLogoLink.astro";
 ---
 
 <header class="w-full flex justify-between items-center h-24">
     <div class="my-4 mx-4">
-        <AppLogo />
+        <AppLogoLink />
     </div>
     <AppNavMenu />
 </header>
