--- a/src/pages/_app/_AppLogo.astro
+++ b/src/pages/_app/_AppLogo.astro
@@ -1,12 +1,5 @@
 ---
-import { makeSherpa } from "../_sherpa";
 
-const sherpa = makeSherpa();
 ---
 
-<a href={sherpa.home({})}>
-  <img
-    src="./logo-placeholder.jpg"
-    alt="Andrew Hol(z)brook | Placeholder Logo"
-  />
-</a>
+<img src="./logo-placeholder.jpg" alt="Andrew Hol(z)brook | Placeholder Logo" />
