--- a/src/pages/play/index.astro
+++ b/src/pages/play/index.astro
@@ -1,13 +1,13 @@
 ---
-import AppNavBar from "../_app/_AppNavBar.astro";
+import AppHeaderCommon from "../_app/_AppHeaderCommon.astro";
 import AppPage from "../_app/_AppPage.astro";
 import AppPageBody from "../_app/_AppPageBody.astro";
-import MeCard from "../_meCard.astro";
+import Hobbies from "./_Hobbies.astro";
 ---
 
 <AppPage>
-    <AppNavBar />
+    <AppHeaderCommon />
     <AppPageBody>
-        <MeCard />
+        <Hobbies />
     </AppPageBody>
 </AppPage>
