--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -1,5 +1,5 @@
 ---
-import AppNavBar from "../_app/_AppNavBar.astro";
+import AppHeaderCommon from "../_app/_AppHeaderCommon.astro";
 import AppPage from "../_app/_AppPage.astro";
 import AppPageBody from "../_app/_AppPageBody.astro";
 import GoalsSection from "./_GoalsSection.astro";
@@ -10,7 +10,7 @@ import WorkPageHeader from "./_WorkPageHeader.astro";
 ---
 
 <AppPage>
-    <AppNavBar />
+    <AppHeaderCommon />
     <AppPageBody>
         <WorkPageHeader />
         <ProfessionalSummary />
