--- a/src/pages/family/index.astro
+++ b/src/pages/family/index.astro
@@ -1,12 +1,12 @@
 ---
-import AppNavBar from "../_app/_AppNavBar.astro";
+import AppHeaderCommon from "../_app/_AppHeaderCommon.astro";
 import AppPage from "../_app/_AppPage.astro";
 import AppPageBody from "../_app/_AppPageBody.astro";
 import FamilyMemberList from "../family/_ui/FamilyMemberList.astro";
 ---
 
 <AppPage>
-    <AppNavBar />
+    <AppHeaderCommon />
     <AppPageBody>
         <FamilyMemberList />
     </AppPageBody>
