--- a/src/pages/_homePageSections.astro
+++ b/src/pages/_homePageSections.astro
@@ -5,28 +5,24 @@ const sections = [
         description:
             "Projects, professional growth, and the skills that drive my career.",
         link: "/work",
-        bgImage: "https://via.placeholder.com/1600x900/6C4F37/FFFFFF?text=Work", // Placeholder image for Work section
         textAlign: "text-left",
-        bgColor: "bg-orange-100", // Muted burnt orange background
+        bgColor: "bg-orange-100",
     },
     {
         title: "Family",
         description:
             "The heart of my life, where growth, love, and memories happen.",
         link: "/family",
-        bgImage:
-            "https://via.placeholder.com/1600x900/9E9E9E/FFFFFF?text=Family", // Placeholder image for Family section
         textAlign: "text-center",
-        bgColor: "bg-neutral-100", // Soft neutral color for family section
+        bgColor: "bg-neutral-100",
     },
     {
         title: "Play",
         description:
             "Hobbies and activities that bring joy, balance, and inspiration.",
         link: "/play",
-        bgImage: "https://via.placeholder.com/1600x900/FF6F00/FFFFFF?text=Play", // Placeholder image for Play section
         textAlign: "text-right",
-        bgColor: "bg-orange-200", // Muted burnt orange background for the Play section
+        bgColor: "bg-orange-200",
     },
 ];
 ---
@@ -34,7 +30,7 @@ const sections = [
 <section class="py-16">
     <div class="px-4 text-center">
         <h1 class="text-5xl font-semibold text-gray-800 mb-8">
-            Andrew Hol(z)brook
+            Andrew Holbrook
         </h1>
         <p class="text-xl text-gray-600 mb-12">
             A brief, warm welcome about your journey and values.
@@ -46,7 +42,7 @@ const sections = [
             sections.map((section, index) => (
                 <div
                     class={`relative flex items-center justify-center py-32 ${section.bgColor} text-gray-700 mb-12`}
-                    style={`background-image: url(${section.bgImage}); background-size: cover; background-position: center;`}
+                    style={`background-size: cover; background-position: center;`}
                 >
                     <div class="absolute inset-0 bg-black opacity-30" />
 
