--- a/src/pages/_app/_AppLogoLink.astro
+++ b/src/pages/_app/_AppLogoLink.astro
@@ -1,10 +1,11 @@
 ---
-import { makeSherpa } from "../_sherpa";
+import { makeSherpa } from "../_sherpa/Sherpa";
+import AppLink from "./_AppLink.astro";
 import AppLogo from "./_AppLogo.astro";
 
 const sherpa = makeSherpa();
 ---
 
-<a href={sherpa.home({})}>
+<AppLink href={sherpa.home({})}>
   <AppLogo />
-</a>
+</AppLink>
