--- a/src/pages/play/index.astro
+++ b/src/pages/play/index.astro
@@ -1,13 +1,27 @@
 ---
+import { hobbies } from "./hobby/_hobbies";
 import AppHeaderCommon from "../_app/_AppHeaderCommon.astro";
+import AppLink from "../_app/_AppLink.astro";
 import AppPage from "../_app/_AppPage.astro";
 import AppPageBody from "../_app/_AppPageBody.astro";
-import Hobbies from "./_Hobbies.astro";
+import Card from "../../lib/ui/Card.astro";
 ---
 
 <AppPage>
     <AppHeaderCommon />
     <AppPageBody>
-        <Hobbies />
+        <div class="space-y-6">
+            {
+                hobbies.map((hobby) => (
+                    <AppLink href={hobby.href} class="block">
+                        <Card>
+                            <h2 class="text-xl font-semibold text-gray-800">
+                                {hobby.name}
+                            </h2>
+                        </Card>
+                    </AppLink>
+                ))
+            }
+        </div>
     </AppPageBody>
 </AppPage>
