reorg family page folder

--- a/src/pages/family/_familyMember/FamilyMemberList.astro
+++ b/src/pages/family/_familyMember/FamilyMemberList.astro
@@ -1,7 +1,8 @@
 ---
 import FamilyMemberListItem from "./FamilyMemberListItem.astro";
-import { familyMembers } from "../_familyMembers";
+
 import VStack from "../../../lib/ui/VStack.astro";
+import { familyMembers } from "./_familyMembers/_familyMembers";
 ---
 
 <VStack as="ul" class="px-8 gap-4">
