--- a/src/pages/family/index.astro
+++ b/src/pages/family/index.astro
@@ -2,7 +2,7 @@
 import AppHeaderCommon from "../_app/_AppHeaderCommon.astro";
 import AppPage from "../_app/_AppPage.astro";
 import AppPageBody from "../_app/_AppPageBody.astro";
-import FamilyMemberList from "../family/_ui/FamilyMemberList.astro";
+import FamilyMemberList from "./_familyMember/FamilyMemberList.astro";
 ---
 
 <AppPage>
