--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,78 @@
 ---
-import AppHeaderSimple from "./_app/_AppHeaderSimple.astro";
 import AppPage from "./_app/_AppPage.astro";
 import AppPageBody from "./_app/_AppPageBody.astro";
-import HomePageSections from "./_homePageSections.astro";
+
+const sections = [
+    {
+        title: "Work",
+        description:
+            "Projects, professional growth, and the skills that drive my career.",
+        link: "/work",
+        textAlign: "text-left",
+        bgColor: "bg-orange-100",
+    },
+    {
+        title: "Family",
+        description:
+            "The heart of my life, where growth, love, and memories happen.",
+        link: "/family",
+        textAlign: "text-center",
+        bgColor: "bg-neutral-100",
+    },
+    {
+        title: "Play",
+        description:
+            "Hobbies and activities that bring joy, balance, and inspiration.",
+        link: "/play",
+        textAlign: "text-right",
+        bgColor: "bg-orange-200",
+    },
+];
 ---
 
 <AppPage>
-    <AppHeaderSimple />
     <AppPageBody>
-        <HomePageSections />
+        <section class="py-16">
+            <div class="px-4 text-center">
+                <h1 class="text-5xl font-semibold text-gray-800 mb-8">
+                    Andrew Holbrook
+                </h1>
+                <p class="text-xl text-gray-600 mb-12">
+                    A brief, warm welcome about your journey and values.
+                </p>
+            </div>
+
+            <div class="px-4">
+                {
+                    sections.map((section, index) => (
+                        <div
+                            class={`relative flex items-center justify-center py-32 ${section.bgColor} text-gray-700 mb-12`}
+                            style={`background-size: cover; background-position: center;`}
+                        >
+                            <div class="absolute inset-0 bg-black opacity-30" />
+
+                            <div
+                                class={`container mx-auto px-4 relative ${section.textAlign}`}
+                            >
+                                <div class="w-full max-w-4xl">
+                                    <h2 class="text-4xl font-medium text-gray-800 mb-4">
+                                        {section.title}
+                                    </h2>
+                                    <p class="text-lg text-gray-600 mb-4">
+                                        {section.description}
+                                    </p>
+                                    <a
+                                        href={section.link}
+                                        class="text-lg font-semibold text-orange-500 hover:text-orange-400 underline"
+                                    >
+                                        Explore {section.title}
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    ))
+                }
+            </div>
+        </section>
     </AppPageBody>
 </AppPage>
