--- a/src/pages/family/index.astro
+++ b/src/pages/family/index.astro
@@ -7,7 +7,7 @@ import FamilyMemberList from "./_familyMember/FamilyMemberList.astro";
 
 <AppPage>
     <AppHeaderCommon />
-    <AppPageBody>
+    <AppPageBody class="mx-4 mt-12">
         <FamilyMemberList />
     </AppPageBody>
 </AppPage>
