--- a/src/pages/work/_WorkPageHeader.astro
+++ b/src/pages/work/_WorkPageHeader.astro
@@ -1,9 +1,9 @@
 ---
 const name = "Andrew Holbrook";
-const title = "Software Engineer";
+const title = "Senior Software Engineer";
 ---
 
-<header class="text-center mb-12">
+<header class="mb-12">
     <h1 class="text-3xl font-bold">{name}</h1>
     <h2 class="text-xl text-gray-600">{title}</h2>
 </header>
