--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -11,7 +11,7 @@ import WorkPageHeader from "./_WorkPageHeader.astro";
 
 <AppPage>
     <AppHeaderCommon />
-    <AppPageBody>
+    <AppPageBody class="mx-4 mt-12">
         <WorkPageHeader />
         <ProfessionalSummary />
         <GoalsSection />
