--- a/src/pages/play/index.astro
+++ b/src/pages/play/index.astro
@@ -9,7 +9,7 @@ import Card from "../../lib/ui/Card.astro";
 
 <AppPage>
     <AppHeaderCommon />
-    <AppPageBody>
+    <AppPageBody class="mx-4 mt-12">
         <div class="space-y-6">
             {
                 hobbies.map((hobby) => (
