--- a/src/pages/_app/_AppPageBody.astro
+++ b/src/pages/_app/_AppPageBody.astro
@@ -8,7 +8,7 @@ interface Props {
 
 const props: Props = Astro.props;
 const className = props.class ?? "";
-const backgroundColor = props.backgroundColor ?? "bg-gray-100";
+const backgroundColor = props.backgroundColor ?? "bg-white";
 ---
 
 <Box class={`${backgroundColor} ${className}`}>
