--- a/src/pages/_app/_AppHeaderCommon.astro
+++ b/src/pages/_app/_AppHeaderCommon.astro
@@ -1,14 +1,22 @@
 ---
 import AppNavMenu from "./_AppNavMenu.astro";
 import AppLogoLink from "./_AppLogoLink.astro";
+
+interface Props {
+    class?: string;
+}
+
+const props: Props = Astro.props;
 ---
 
 <header
-    class="fixed top-0 left-0 right-0 z-50 bg-white shadow-md w-full flex justify-between items-center h-24"
+    class={`fixed top-0 left-0 right-0 z-50 bg-orange-300 shadow-md w-full flex justify-between items-center h-24 ${props.class}`}
 >
-    <div class="my-4 mx-4">
+    <div
+        class="my-4 mx-4 max-w-screen-md w-full mx-auto flex justify-between items-center"
+    >
         <AppLogoLink />
+        <AppNavMenu />
     </div>
-    <AppNavMenu />
 </header>
 <div class="h-24">&nbsp;</div>
