--- a/src/pages/_app/_AppPage.astro
+++ b/src/pages/_app/_AppPage.astro
@@ -12,7 +12,7 @@ import "./src/styles/global.css";
     <title>Andrew Hol(z)brook</title>
   </head>
 
-  <body class="bg-gray-100 w-1/1 h-1/1 m-0">
+  <body class="bg-white w-1/1 h-1/1 m-0">
     <slot />
   </body>
 </html>
