--- a/src/pages/family/index.astro
+++ b/src/pages/family/index.astro
@@ -1,5 +1,7 @@
 ---
+import AppFooter from "../_app/_AppFooter.astro";
 import AppHeaderCommon from "../_app/_AppHeaderCommon.astro";
+import AppHeroSection from "../_app/_AppHeroSection.astro";
 import AppPage from "../_app/_AppPage.astro";
 import AppPageBody from "../_app/_AppPageBody.astro";
 import FamilyMemberList from "./_familyMember/FamilyMemberList.astro";
@@ -7,7 +9,23 @@ import FamilyMemberList from "./_familyMember/FamilyMemberList.astro";
 
 <AppPage>
     <AppHeaderCommon />
-    <AppPageBody class="mx-4 mt-12">
-        <FamilyMemberList />
+
+    <AppPageBody
+        backgroundColor="bg-gray-100"
+        class="flex flex-col min-h-screen"
+    >
+        <AppHeroSection
+            title="Meet My Family"
+            subtitle="Get to know the wonderful people who shape my world."
+        />
+
+        <!-- Family Members Section -->
+        <section class="py-12">
+            <div class="max-w-6xl mx-auto px-6">
+                <FamilyMemberList />
+            </div>
+        </section>
+
+        <AppFooter />
     </AppPageBody>
 </AppPage>
