--- a/src/pages/play/disc-golf/index.astro
+++ b/src/pages/play/disc-golf/index.astro
@@ -1,28 +1,43 @@
 ---
+import Breadcrumb from "../../../lib/ui/Breadcrumb.astro";
+import Breadcrumbs from "../../../lib/ui/Breadcrumbs.astro";
+import AppFooter from "../../_app/_AppFooter.astro";
 import AppHeaderCommon from "../../_app/_AppHeaderCommon.astro";
 import AppPage from "../../_app/_AppPage.astro";
 import AppPageBody from "../../_app/_AppPageBody.astro";
+import { makeSherpa } from "../../_sherpa/Sherpa";
+
+const sherpa = makeSherpa();
 ---
 
 <AppPage>
     <AppHeaderCommon />
-    <AppPageBody>
-        <section class="p-6 bg-gray-100 rounded-2xl shadow-md">
-            <h2 class="text-2xl font-bold mb-4">Disc Golf</h2>
-            <p>
+    <AppPageBody class="flex flex-col min-h-screen bg-gray-100">
+        <Breadcrumbs>
+            <Breadcrumb label="Play" href={sherpa.play.index({})} />
+            <Breadcrumb label="Disc Golf" />
+        </Breadcrumbs>
+
+        <section
+            class="max-w-4xl mx-auto p-6 mt-12 bg-white rounded-2xl shadow-md"
+        >
+            <h2 class="text-2xl lg:text-3xl font-bold mb-4 text-gray-800">
+                Disc Golf
+            </h2>
+            <p class="text-lg text-gray-700 mb-4">
                 This sport was invisible to me for many years. I knew that disc
                 golf courses existed, but before I was introduced to disc golf
                 when I was working at MasterControl I had no idea the quality
                 and quantity of disc golf courses within driving distance.
             </p>
-            <p>
+            <p class="text-lg text-gray-700 mb-4">
                 The first course I ever played was Creekside in Holliday. I was
                 immediately hooked.
             </p>
-            <hr />
-            <p>I was immediately hooked.</p>
-            <hr />
-            <p>
+            <hr class="my-4" />
+            <p class="text-lg text-gray-700 mb-4">I was immediately hooked.</p>
+            <hr class="my-4" />
+            <p class="text-lg text-gray-700">
                 That day, I looked up local courses and found a lot to pick
                 from, so I chose Art Dye in American Fork to visit first. I
                 drove my long commute from Cottonwood Heights back down to Utah
@@ -30,10 +45,12 @@ import AppPageBody from "../../_app/_AppPageBody.astro";
                 course. Like magic, there it was. A huge course with 18 holes
                 with chain catchers and everything.
             </p>
-            <p>
+            <p class="text-lg text-gray-700 mb-4">
                 I was so excited about it, I called up my parents and told them
                 I found them a new sport.
             </p>
         </section>
+
+        <AppFooter />
     </AppPageBody>
 </AppPage>
