--- a/src/pages/play/video-games/index.astro
+++ b/src/pages/play/video-games/index.astro
@@ -1,19 +1,36 @@
 ---
+import Breadcrumb from "../../../lib/ui/Breadcrumb.astro";
+import Breadcrumbs from "../../../lib/ui/Breadcrumbs.astro";
+import AppFooter from "../../_app/_AppFooter.astro";
 import AppHeaderCommon from "../../_app/_AppHeaderCommon.astro";
 import AppPage from "../../_app/_AppPage.astro";
 import AppPageBody from "../../_app/_AppPageBody.astro";
+import { makeSherpa } from "../../_sherpa/Sherpa";
+
+const sherpa = makeSherpa();
 ---
 
 <AppPage>
     <AppHeaderCommon />
-    <AppPageBody>
-        <section class="p-6 bg-gray-100 rounded-2xl shadow-md">
-            <h2 class="text-2xl font-bold mb-4">Video Games</h2>
-            <p>
+    <AppPageBody class="flex flex-col min-h-screen bg-gray-100">
+        <Breadcrumbs>
+            <Breadcrumb label="Play" href={sherpa.play.index({})} />
+            <Breadcrumb label="Video Games" />
+        </Breadcrumbs>
+
+        <section
+            class="max-w-4xl mx-auto p-6 mt-12 bg-white rounded-2xl shadow-md"
+        >
+            <h2 class="text-2xl lg:text-3xl font-bold mb-6 text-gray-800">
+                Video Games
+            </h2>
+            <p class="text-lg text-gray-700 mb-4">
                 I've been playing video games since I was a child. My PokeMon
                 cartridge on the original GameBoy was the Blue version with
                 Blastoise on the cartridge artwork.
             </p>
         </section>
+
+        <AppFooter />
     </AppPageBody>
 </AppPage>
