--- a/src/pages/_app/_PrintButton.astro
+++ b/src/pages/_app/_PrintButton.astro
@@ -4,7 +4,7 @@ const { class: customClass = "" } = Astro.props;
 ---
 
 <button
-    class={`fixed bottom-6 left-1/2 transform -translate-x-1/2 mb-4 px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 ${customClass}`}
+    class={`px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 ${customClass}`}
     id="print-button"
 >
     Print Resume
