--- a/src/pages/_app/_AppHeaderCommon.astro
+++ b/src/pages/_app/_AppHeaderCommon.astro
@@ -19,4 +19,4 @@ const props: Props = Astro.props;
         <AppNavMenu />
     </div>
 </header>
-<div class="h-24">&nbsp;</div>
+<div class="h-24">{" "}</div>
